--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "multer-storage-cloudinary": "^4.0.0",
     "passport": "^0.5.2",
     "passport-local": "^1.0.0",
-    "passport-local-mongoose": "^7.0.0"
+    "passport-local-mongoose": "^7.0.0",
+    "sanitize-html": "^2.7.0"
   }
 }
